ready for proofreading

--- a/thesis/chap1.tex
+++ b/thesis/chap1.tex
@@ -8,11 +8,7 @@
 %% ---- MY NEW INTRO ----
 
 \section{Motivation}
-%Comparing music is seminal to the field of Music Information Retrieval (MIR). Questions such as ``Is this piece of music plagiarized from Bach?", ``Is this rhythmically more similar to Philip Glass or Scott Joplin? Melodically?", ``Is this newly discovered musical transcription an entirely new folk song or just a variation of an old one?" can be answered by comparing the pieces in question and applying a quantitative metric to determine that, ``Yes, this piece quotes Bach more than other pieces of similar time period and style", or, ``This piece has 74\% melodic similarity to Joplin's repertoire, 10\% similarity to Glass, but rhythmically shares 64\% similarity with Glass and only 12\% with Joplin."
-
-%% ---- END MY NEW INRO ----
-
-%% ----- BEGIN INTRO FROM PROPOSAL ----- 
+\subsection{Why Compare Music?}
 Comparing music is seminal to the field of Music Information Retrieval (MIR). Questions such as ``Is this piece of music plagiarized from Bach?", ``Is this rhythmically more similar to Philip Glass or Scott Joplin? Melodically?", ``Is this newly discovered musical transcription an entirely new folk song or just a variation of an old one?" can be answered by comparing the pieces in question and applying a quantitative metric to determine that, ``Yes, this piece quotes Bach more than other pieces of similar time period and style", or, ``This piece has 74\% melodic similarity to Joplin's repertoire, 10\% similarity to Glass, but rhythmically shares 64\% similarity with Glass and only 12\% with Joplin.''
 
 Computational music comparison, a subset of classical computer science string comparison, comes in many forms and each domain has slightly different specifications for alignment and comparison. 
@@ -21,10 +17,13 @@ The domain of music comparison that I will be studying and building tools for wi
 
 MIDI represents music in a very limited manner. This format encodes enharmonic notes as the ``same''; note lengths are relative to each other, not necessarily in relation to a defined time signature; there is freedom in representing duration, as long as the total length is correct; and many other design decisions that make MIDI very universally compatible but also lacking in definition. Furthermore, since MIDI scores are generally created with some kind of human input, they tend to be correct, pitch-wise and rhythmically. 
  
-OMR takes a score that likely to be correct (the idea being this is a printed and published work, and also likely proofed for errors by the composer or publisher), scans its and tries to recreate what it scans in a digital notation format. While the more commonplace OCR has been optimized and whittled to an extremely high standard, OMR is still at present only 90\% correct \cite{church}. One can imagine that the ``alphabet'' that OMR deals with is much larger and less well-defined than the 52 capital and lowercase letters and punctuation that OCR has been optimized for. Therefore, much of the optimizations for OCR do not directly apply to OMR. Some common errors in OMR include incorrectly recognizing a sharp as a natural and vice versa, mistaking rests as notes and vice versa, and other errors that any musician trained in the basics of music theory could identify as "wrong". Simple rules such as: all measures must sum to the same duration, only notes with existing accidentals can be made natural, should be able to great improve the quality of OMR if taken into account.
+OMR takes a score that likely to be correct (the idea being this is a printed and published work, and also likely proofed for errors by the composer or publisher), scans its and tries to recreate what it scans in a digital notation format. While the more commonplace OCR has been optimized and whittled to an extremely high standard, OMR is still at present only 90\% correct \cite{rebelo}. The space that OMR is in with is much larger and less well-defined than the 52 capital and lowercase letters and punctuation that OCR has been optimized for. Therefore, much of the optimizations for OCR do not directly apply to OMR. Some common errors in OMR include incorrectly recognizing a sharp as a natural and vice versa, mistaking rests as notes and vice versa, and other errors that any musician trained in the basics of music theory could identify as ``wrong''. 
+
+\subsection{Why Correct Music?}
+
+Simple rules such as: all measures must sum to the same duration, only notes with existing accidentals can be made natural, should be able to great improve the quality of OMR if taken into account.
 
 The idea here is that we can compare MIDI scores and OMR scores, properly align them for as many points in the music as possible, and then use the correct metadata present in the MIDI to score to correct for scanning errors in the OMR score. 
-
 %% ----- END INTRO FROM PROPOSAL ----- 
 
 \section{Chapter Summary}
