--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -105,8 +105,8 @@
   year         = 2013
  }
  
- @misc{IMSLP,
-  key = {IMSLP}
+@misc{imslp,
+  key = {IMSLP},
   title = {IMSLP/Petrucci Library Free Public Domain Sheet Music},
   howpublished = {\url{http://imslp.org/}},
   note = {Accessed: 2015-10-10}
