--- a/thesis/cover.tex
+++ b/thesis/cover.tex
@@ -125,8 +125,10 @@
 
 \section*{Acknowledgments}
 
-This is the acknowledgements section.  You should replace this with your
-own acknowledgements.
+readers:
+colin m
+katie g
+jonathan m
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % -*-latex-*-
